fixed desktop logo stretching

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -607,7 +607,8 @@ ul {
 		margin: 0 !important;
 		position: absolute;
 		left: 2em;
-		height: 80px;
+        height: 80px;
+        width: auto;
 	}
 
 	/*navbar */
